--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,13 @@
 body {
-  background-color: rgb(173, 214, 201);
+  background-color: rgb(198, 235, 223);
 }
+
+.container h1 {
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+
+.container p {
+  margin-bottom: 25px;
+}
+
