--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 body {
   background-color: rgb(198, 235, 223);
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 .container h1 {
@@ -12,6 +13,6 @@ body {
 }
 
 .btn {
-  border: 2px solid black;
+  border: 1px solid black;
   margin-left: 8px;
 }
