--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,10 @@ body {
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
+#language-suggester {
+  margin-top: 40px;
+}
+
 .container h1 {
   margin-top: 30px;
   margin-bottom: 20px;
@@ -12,15 +16,21 @@ body {
   margin-bottom: 25px;
 }
 
+#description {
+  font-style: italic;
+  font-size: 13pt;
+  width: 65%;
+  margin-top: 30px;
+}
+
 .btn {
   border: 1px solid black;
   margin-left: 8px;
 }
 
-.results-here {
+#results-here {
   display: none;
+  margin-top: 30px;
 }
 
-.clear {
-  margin-top: 20px;
-}
+
