--- a/css/styles.css
+++ b/css/styles.css
@@ -8,8 +8,8 @@ body {
 }
 
 .container h1 {
-  margin-top: 30px;
-  margin-bottom: 20px;
+  margin-top: 40px;
+  margin-bottom: 8px;
 }
 
 .container p {
@@ -26,6 +26,10 @@ body {
 .btn {
   border: 1px solid black;
   margin-left: 8px;
+}
+
+#submit-button {
+  background-color: rgb(212, 233, 233);
 }
 
 #results-here {
